# cng-onboarding

./: .gitignore  .nojekyll  _quarto.yml  about.html  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
tutorials/stac/: planetary_computer_reading_stac.qmd  stac_load_e84_aws.qmd
tutorials/stac/e84_aws/: pyproject.toml
tutorials/stac/e84_aws_qmd/: index.qmd
tutorials/stac/mspc_stac/: index.html  index.ipynb  pyproject.toml
