[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = ["odc-ui>=0.2.1,<0.3"]
description = "Add a short description here"
name = "stac-onboarding"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
stac_onboarding = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
jupyter = ">=1.1.1,<2"
dask = ">=2025.2.0,<2026"
distributed = ">=2025.2.0,<2026"
folium = ">=0.19.4,<0.20"
geopandas = ">=1.0.1,<2"
shapely = ">=2.0.7,<3"
odc-algo = ">=0.2.3,<0.3"
pystac-client = ">=0.8.6,<0.9"
odc-stac = ">=0.3.11,<0.4"
