[project]
authors = [{name = "Tyler Erickson", email = "tyler@vorgeo.com"}]
dependencies = []
description = "Add a short description here"
name = "stac-onboarding"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
stac-onboarding = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
jupyter = ">=1.1.1,<2"
pystac-client = ">=0.8.6,<0.9"
geopandas = ">=1.0.1,<2"
rich = ">=13.9.4,<14"
planetary-computer = ">=1.0.0,<2"
rioxarray = ">=0.18.2,<0.19"
stackstac = ">=0.5.1,<0.6"
requests = ">=2.32.3,<3"
aiohttp = ">=3.11.13,<4"
zarr = ">=3.0.4,<4"
